--- a/EMV Card Personalisation/EMV Card Personalisation.csproj
+++ b/EMV Card Personalisation/EMV Card Personalisation.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net462</TargetFrameworks>
-    <Product>EMV Card Personalisation Console</Product>
-    <Description>EMV Card Personalisation Console for WSCT.</Description>
+    <Product>EMV Card Personalization Console</Product>
+    <Description>EMV Card Personalization Console for WSCT.</Description>
     <Copyright>Copyright © ENSICAEN / GREYC 2014-2020</Copyright>
     <Authors>Sylvain Vernois</Authors>
     <Company>ENSICAEN</Company>
@@ -12,7 +12,7 @@
     <Version>1.1.0</Version>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <AssemblyName>wsct-emvcp</AssemblyName>
-    <RootNamespace>WSCT.EMV.CardPersonalisationConsole</RootNamespace>
+    <RootNamespace>WSCT.EMV.CardPersonalizationConsole</RootNamespace>
     <OutputType>Exe</OutputType>
     <OutputPath>..\binaries</OutputPath>
   </PropertyGroup>
