--- a/Plugin EMV Explorer/Plugin EMV Explorer.csproj
+++ b/Plugin EMV Explorer/Plugin EMV Explorer.csproj
@@ -15,6 +15,8 @@
     <RootNamespace>WSCT.GUI.Plugins.EMVExplorer</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <AssemblyVersion>3.1.1.0</AssemblyVersion>
+    <FileVersion>3.1.1.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="WSCT.GUI" Version="6.1.0.1" />
