--- a/EMV Library Unit Tests/EMV Library Unit Tests.csproj
+++ b/EMV Library Unit Tests/EMV Library Unit Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net462</TargetFrameworks>
+    <TargetFrameworks>net5.0;net462</TargetFrameworks>
     <Product>WSCT.EMV.UnitTests</Product>
     <Description>EMV Library for WSCT unit tests.</Description>
     <Copyright>Copyright © ENSICAEN / GREYC 2014-2020</Copyright>
@@ -10,8 +10,7 @@
     <RepositoryUrl>https://github.com/wsct/WSCT-Core</RepositoryUrl>
     <PackageTags>wsct, emv</PackageTags>
     <PackageReleaseNotes>Creation of the nuget package.</PackageReleaseNotes>
-    <Version>1.1.0</Version>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <Version>1.1.1</Version>
     <PackageId>WSCT.EMV.UnitTests</PackageId>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <RootNamespace>WSCT.EMV</RootNamespace>
