--- a/Plugin EMV Explorer/Plugin EMV Explorer.csproj
+++ b/Plugin EMV Explorer/Plugin EMV Explorer.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <TargetFrameworks>net462;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0-windows;net462</TargetFrameworks>
     <Version>3.1.0.0</Version>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <RootNamespace>WSCT.GUI.Plugins.EMVExplorer</RootNamespace>
+    <AssemblyName>Plugins.EMVExplorer</AssemblyName>
+
     <Copyright>Copyright © Sylvain Vernois 2010-2020</Copyright>
     <Product>WSCT</Product>
     <Company>ENSICAEN</Company>
@@ -11,9 +16,6 @@
     <PackageProjectUrl>https://github.com/wsct/WSCT-GUI</PackageProjectUrl>
     <Description>EMV Explorer Plugin for WinSCard GUI.</Description>
     <OutputType>Library</OutputType>
-    <AssemblyName>Plugins.EMVExplorer</AssemblyName>
-    <RootNamespace>WSCT.GUI.Plugins.EMVExplorer</RootNamespace>
-    <UseWindowsForms>true</UseWindowsForms>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <AssemblyVersion>3.1.1.0</AssemblyVersion>
     <FileVersion>3.1.1.0</FileVersion>
@@ -31,7 +33,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Gui.cs" SubType="Form" />
+    <Compile Update="Gui.cs" />
     <Compile Update="Gui.Designer.cs" SubType="Form" DependentUpon="Gui.cs" />
   </ItemGroup>
   <ItemGroup>
